--- a/app/src/main/res/layout/fragment_pagos.xml
+++ b/app/src/main/res/layout/fragment_pagos.xml
@@ -49,6 +49,7 @@
                     android:background="@color/AzulOscuro"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="Gastos:"
+                    android:textColor="@color/Blanco"
                     android:textSize="18sp" />
 
                 <TextView
@@ -63,39 +64,39 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="55dp"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:orientation="horizontal">-->
+            <!--            <LinearLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="55dp"-->
+            <!--                android:layout_marginTop="10dp"-->
+            <!--                android:orientation="horizontal">-->
 
-<!--                <ImageButton-->
-<!--                    android:id="@+id/obtenerFecha"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="6"-->
-<!--                    android:background="@color/AzulOscuro"-->
-<!--                    android:src="@drawable/icono_citas"-->
-<!--                    tools:ignore="SpeakableTextPresentCheck" />-->
+            <!--                <ImageButton-->
+            <!--                    android:id="@+id/obtenerFecha"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="match_parent"-->
+            <!--                    android:layout_weight="6"-->
+            <!--                    android:background="@color/AzulOscuro"-->
+            <!--                    android:src="@drawable/icono_citas"-->
+            <!--                    tools:ignore="SpeakableTextPresentCheck" />-->
 
-<!--                <Space-->
-<!--                    android:layout_width="15dp"-->
-<!--                    android:layout_height="match_parent" />-->
+            <!--                <Space-->
+            <!--                    android:layout_width="15dp"-->
+            <!--                    android:layout_height="match_parent" />-->
 
-<!--                <com.google.android.material.textfield.TextInputLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="2">-->
+            <!--                <com.google.android.material.textfield.TextInputLayout-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="match_parent"-->
+            <!--                    android:layout_weight="2">-->
 
-<!--                    <com.google.android.material.textfield.TextInputEditText-->
-<!--                        android:id="@+id/fecha"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="match_parent"-->
-<!--                        android:editable="false"-->
-<!--                        android:hint="Fecha"-->
-<!--                        tools:ignore="Deprecated,TouchTargetSizeCheck" />-->
-<!--                </com.google.android.material.textfield.TextInputLayout>-->
-<!--            </LinearLayout>-->
+            <!--                    <com.google.android.material.textfield.TextInputEditText-->
+            <!--                        android:id="@+id/fecha"-->
+            <!--                        android:layout_width="match_parent"-->
+            <!--                        android:layout_height="match_parent"-->
+            <!--                        android:editable="false"-->
+            <!--                        android:hint="Fecha"-->
+            <!--                        tools:ignore="Deprecated,TouchTargetSizeCheck" />-->
+            <!--                </com.google.android.material.textfield.TextInputLayout>-->
+            <!--            </LinearLayout>-->
 
 
             <!--            <com.google.android.material.textfield.TextInputLayout-->
@@ -115,8 +116,8 @@
                 android:id="@+id/layoutDescPagos"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:counterEnabled="true"
                 android:layout_marginTop="10dp"
+                app:counterEnabled="true"
                 app:counterMaxLength="80"
                 app:errorEnabled="true">
 
@@ -160,35 +161,6 @@
                     tools:ignore="TouchTargetSizeCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!--            <LinearLayout-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="40dp"-->
-            <!--                android:layout_marginTop="10dp"-->
-            <!--                android:orientation="horizontal">-->
-
-            <!--                <Button-->
-            <!--                    android:id="@+id/agregarPago"-->
-            <!--                    android:layout_width="wrap_content"-->
-            <!--                    android:layout_height="wrap_content"-->
-            <!--                    android:layout_weight="1"-->
-            <!--                    android:background="@drawable/boton"-->
-            <!--                    android:text="Agregar"-->
-            <!--                    android:textSize="18sp" />-->
-
-            <!--                <Space-->
-            <!--                    android:layout_width="15dp"-->
-            <!--                    android:layout_height="wrap_content" />-->
-
-            <!--                <Button-->
-            <!--                    android:id="@+id/quitarPago"-->
-            <!--                    android:layout_width="wrap_content"-->
-            <!--                    android:layout_height="wrap_content"-->
-            <!--                    android:layout_weight="1"-->
-            <!--                    android:background="@drawable/boton"-->
-            <!--                    android:text="Quitar"-->
-            <!--                    android:textSize="18sp" />-->
-            <!--            </LinearLayout>-->
-
             <Button
                 android:id="@+id/agregarPago"
                 android:layout_width="match_parent"
@@ -203,11 +175,12 @@
             <TextView
                 android:id="@+id/tituloPagos"
                 android:layout_width="match_parent"
-
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@color/AzulOscuro"
                 android:gravity="center_horizontal|center_vertical"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
                 android:text="Pagos:"
                 android:textColor="@color/Blanco"
                 android:textSize="24sp" />
@@ -246,6 +219,7 @@
                     android:background="@color/AzulOscuro"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="Total:"
+                    android:textColor="@color/Blanco"
                     android:textSize="18sp" />
 
                 <TextView
