--- a/app/src/main/res/layout/fragment_pagos.xml
+++ b/app/src/main/res/layout/fragment_pagos.xml
@@ -12,7 +12,7 @@
         layout="@layout/toolbar" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/siguiente"
+        android:id="@+id/guardadorPagos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -183,7 +183,7 @@
                 android:paddingBottom="2dp"
                 android:text="Pagos:"
                 android:textColor="@color/Blanco"
-                android:textSize="24sp" />
+                android:textSize="18sp" />
 
             <ScrollView
                 android:layout_width="match_parent"
