--- a/app/src/main/res/layout/fragment_historial_odon.xml
+++ b/app/src/main/res/layout/fragment_historial_odon.xml
@@ -38,17 +38,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="70dp"
-                android:weightSum="1"
-                android:orientation="horizontal">
-
-                <!--                <TextView-->
-                <!--                    android:id="@+id/titulo_detalle"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:background="@color/AzulOscuro"-->
-                <!--                    android:gravity="center_horizontal|center_vertical"-->
-                <!--                    android:text="Detalle:"-->
-                <!--                    android:textSize="18sp" />-->
+                android:orientation="horizontal"
+                android:weightSum="1">
 
                 <CheckBox
                     android:id="@+id/dolor"
@@ -63,28 +54,10 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.3"
                     android:ems="10"
-                    android:maxLength="60"
                     android:hint="¿Porque?"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:maxLength="60" />
 
-                <!--                <android.support.design.widget.TextInputLayout-->
-                <!--                    android:id="@+id/dolorLayout"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="match_parent"-->
-                <!--                    android:layout_marginTop="10dp"-->
-                <!--                    app:counterEnabled="true"-->
-                <!--                    app:counterMaxLength="60"-->
-                <!--                    app:errorEnabled="true">-->
-
-                <!--                    <android.support.design.widget.TextInputEditText-->
-                <!--                        android:id="@+id/desc_dolor"-->
-                <!--                        android:layout_width="match_parent"-->
-                <!--                        android:layout_height="wrap_content"-->
-                <!--                        android:hint="Descripcion"-->
-                <!--                        android:inputType="text"-->
-                <!--                        android:maxLength="60"-->
-                <!--                        android:maxLines="1" />-->
-                <!--                </android.support.design.widget.TextInputLayout>-->
 
             </LinearLayout>
 
@@ -99,14 +72,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Gingivitis" />
-
-                <!--                <EditText-->
-                <!--                    android:id="@+id/otros_ho"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:ems="10"-->
-                <!--                    android:hint="Otros:"-->
-                <!--                    android:inputType="textPersonName" />-->
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/otrosLayout"
