--- a/app/src/main/res/layout/fragment_menu_ficha.xml
+++ b/app/src/main/res/layout/fragment_menu_ficha.xml
@@ -1,32 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/FondoSecundario"
     tools:context=".Rutas.Fichas.MenuFichas">
 
-<!--    <include-->
-<!--        android:id="@+id/toolbar"-->
-<!--        layout="@layout/toolbar" />-->
-
     <TextView
         android:id="@+id/titulo_fichas"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:background="@color/AzulOscuro"
+        android:gravity="center_horizontal|center_vertical"
         android:text="Fichas Disponibles"
         android:textColor="@color/Blanco"
-        android:textSize="24dp"
-        android:gravity="center_horizontal|center_vertical"
-        android:background="@color/AzulOscuro"
-        />
+        android:textSize="24dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="80dp"
         android:layout_marginLeft="12dp"
+        android:layout_marginTop="70dp"
         android:layout_marginRight="12dp"
         android:orientation="vertical">
 
@@ -34,53 +28,51 @@
             android:id="@+id/fnueva"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/FondoSecundario2"
             android:orientation="vertical"
             android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="@color/FondoSecundario2">
+            android:paddingBottom="10dp">
 
             <ImageView
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/ic_file"/>
+                android:src="@drawable/ic_file" />
 
             <TextView
                 android:id="@+id/texto_fnueva"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ficha General"
-                android:textSize="24dp"
-                android:textColor="@color/Blanco"
                 android:gravity="center_horizontal"
-                />
+                android:text="Ficha General"
+                android:textColor="@color/Blanco"
+                android:textSize="24dp" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/fenueva"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginTop="10dp"
+            android:background="@color/FondoSecundario2"
+            android:orientation="vertical"
             android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="@color/FondoSecundario2">
+            android:paddingBottom="10dp">
 
             <ImageView
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/ic_finance"/>
+                android:src="@drawable/ic_finance" />
 
             <TextView
                 android:id="@+id/texto_fenueva"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Evaluacion"
-                android:textSize="24dp"
-                android:textColor="@color/Blanco"
                 android:gravity="center_horizontal"
-                />
+                android:text="Evaluacion"
+                android:textColor="@color/Blanco"
+                android:textSize="24dp" />
         </LinearLayout>
     </LinearLayout>
 
