--- a/app/src/main/res/layout/fragment_historial_odon_dos.xml
+++ b/app/src/main/res/layout/fragment_historial_odon_dos.xml
@@ -37,10 +37,45 @@
             android:orientation="vertical"
             android:paddingBottom="200dp">
 
+            <LinearLayout
+                android:id="@+id/layoutTotalPagos"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tituloPagos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.7"
+                    android:background="@color/AzulOscuro"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+                    android:text="Pagos:"
+                    android:textColor="@color/Blanco"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/totalPagos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.3"
+                    android:gravity="center"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+                    android:text="00.00"
+                    android:textColor="@color/Blanco"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/titulo_diagnostico"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:background="@color/AzulOscuro"
                 android:gravity="center_horizontal|center_vertical"
                 android:paddingTop="2dp"
@@ -226,7 +261,7 @@
                     android:paddingBottom="2dp"
                     android:text="00.00"
                     android:textColor="@color/Blanco"
-                    android:textSize="18sp" />
+                    android:textSize="16sp" />
             </LinearLayout>
 
 
@@ -249,8 +284,7 @@
                             android:id="@+id/table"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:layout_gravity="center">
-                        </TableLayout>
+                            android:layout_gravity="center"></TableLayout>
                     </HorizontalScrollView>
                 </LinearLayout>
             </ScrollView>
