--- a/app/src/main/res/layout/fragment_pagos.xml
+++ b/app/src/main/res/layout/fragment_pagos.xml
@@ -48,6 +48,8 @@
                     android:layout_weight="0.7"
                     android:background="@color/AzulOscuro"
                     android:gravity="center_horizontal|center_vertical"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
                     android:text="Gastos:"
                     android:textColor="@color/Blanco"
                     android:textSize="18sp" />
@@ -55,9 +57,11 @@
                 <TextView
                     android:id="@+id/totalGasto"
                     android:layout_width="wrap_content"
-                    android:layout_height="24dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1.3"
                     android:gravity="center"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
                     android:text="00.00"
                     android:textColor="@color/Blanco"
                     android:textSize="18sp"
@@ -218,6 +222,8 @@
                     android:layout_weight="0.7"
                     android:background="@color/AzulOscuro"
                     android:gravity="center_horizontal|center_vertical"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
                     android:text="Total:"
                     android:textColor="@color/Blanco"
                     android:textSize="18sp" />
@@ -225,9 +231,11 @@
                 <TextView
                     android:id="@+id/totalAbono"
                     android:layout_width="wrap_content"
-                    android:layout_height="24dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1.3"
                     android:gravity="center"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
                     android:text="00.00"
                     android:textColor="@color/Blanco"
                     android:textSize="18sp"
