--- a/app/src/main/res/layout/fragment_pacientes.xml
+++ b/app/src/main/res/layout/fragment_pacientes.xml
@@ -70,7 +70,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="65dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="65dp">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/nombreLayout"
@@ -173,7 +174,6 @@
                     android:id="@+id/fecha_dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="8dp"
                     android:layout_weight="1.7"
                     android:background="@color/AzulOscuro"
                     android:src="@drawable/icono_citas" />
