--- a/app/src/main/res/layout/menu_inferior_fichas.xml
+++ b/app/src/main/res/layout/menu_inferior_fichas.xml
@@ -73,6 +73,7 @@
                 android:paddingBottom="10dp">
 
                 <ImageView
+                    android:id="@+id/icono_bloqueo"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center_horizontal"
