--- a/app/src/main/res/layout/dialogo_configuracion.xml
+++ b/app/src/main/res/layout/dialogo_configuracion.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/FondoSecundario">
 
     <include
@@ -27,7 +27,8 @@
                 android:paddingLeft="10dp"
                 android:text="General"
                 android:textColor="@color/Blanco"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <View
                 android:layout_width="match_parent"
@@ -39,10 +40,10 @@
                 android:id="@+id/recordarCuenta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/FondoSecundario2"
                 android:paddingLeft="12dp"
                 android:paddingRight="6dp"
                 android:text="Recordar Cuenta"
-                android:background="@color/FondoSecundario2"
                 android:textColor="@color/Blanco"
                 android:textSize="18sp" />
 
@@ -58,8 +59,10 @@
                 android:layout_marginTop="10dp"
                 android:paddingLeft="10dp"
                 android:text="Almacenamiento"
+
                 android:textColor="@color/Blanco"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <View
                 android:layout_width="match_parent"
@@ -70,8 +73,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
                 android:background="@color/FondoSecundario2"
+                android:orientation="horizontal"
                 android:weightSum="2">
 
                 <LinearLayout
@@ -105,10 +108,10 @@
 
                 <ImageButton
                     android:id="@+id/limpiar1"
-                    android:layout_height="50dp"
                     android:layout_width="wrap_content"
-                    android:layout_weight="0.3"
+                    android:layout_height="50dp"
                     android:layout_marginRight="4dp"
+                    android:layout_weight="0.3"
                     android:background="@color/FondoSecundario2"
                     android:src="@drawable/ic_borar"
                     android:text="Limpiar"
@@ -129,8 +132,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
                 android:background="@color/FondoSecundario2"
+                android:orientation="horizontal"
                 android:weightSum="2">
 
                 <LinearLayout
@@ -164,10 +167,10 @@
 
                 <ImageButton
                     android:id="@+id/limpiar2"
-                    android:layout_height="50dp"
                     android:layout_width="wrap_content"
-                    android:layout_weight="0.3"
+                    android:layout_height="50dp"
                     android:layout_marginRight="4dp"
+                    android:layout_weight="0.3"
                     android:background="@color/FondoSecundario2"
                     android:src="@drawable/ic_borar"
                     android:text="Limpiar"
@@ -188,8 +191,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
                 android:background="@color/FondoSecundario2"
+                android:orientation="horizontal"
                 android:weightSum="2">
 
                 <LinearLayout
@@ -223,10 +226,10 @@
 
                 <ImageButton
                     android:id="@+id/limpiar3"
-                    android:layout_height="50dp"
                     android:layout_width="wrap_content"
-                    android:layout_weight="0.3"
+                    android:layout_height="50dp"
                     android:layout_marginRight="4dp"
+                    android:layout_weight="0.3"
                     android:background="@color/FondoSecundario2"
                     android:src="@drawable/ic_borar"
                     android:text="Limpiar"
@@ -246,7 +249,8 @@
                 android:paddingLeft="10dp"
                 android:text="Acerca de DHR"
                 android:textColor="@color/Blanco"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <View
                 android:layout_width="match_parent"
@@ -257,8 +261,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:background="@color/FondoSecundario2">
+                android:background="@color/FondoSecundario2"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -286,7 +290,8 @@
                         android:paddingBottom="3dp"
                         android:text="v1.0"
                         android:textColor="@color/Blanco"
-                        android:textSize="15sp" />
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -298,49 +303,49 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="5dp"
-                android:background="@color/FondoSecundario2">
+                android:background="@color/FondoSecundario2"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:padding="10dp"
-                    android:src="@drawable/ic_compartir"/>
+                    android:src="@drawable/ic_compartir" />
 
                 <TextView
                     android:id="@+id/tituloAcerca3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Compartir Aplicacion"
                     android:gravity="center_vertical"
                     android:paddingLeft="8dp"
-                    android:textSize="20dp"
-                    android:textColor="@color/Blanco"/>
+                    android:text="Compartir Aplicacion"
+                    android:textColor="@color/Blanco"
+                    android:textSize="20dp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="5dp"
-                android:background="@color/FondoSecundario2">
+                android:background="@color/FondoSecundario2"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:padding="10dp"
-                    android:src="@drawable/pdf_box"/>
+                    android:src="@drawable/pdf_box" />
 
                 <TextView
                     android:id="@+id/abrirPDF"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Manual de Usuario"
                     android:gravity="center_vertical"
                     android:paddingLeft="8dp"
-                    android:textSize="20dp"
-                    android:textColor="@color/Blanco"/>
+                    android:text="Manual de Usuario"
+                    android:textColor="@color/Blanco"
+                    android:textSize="20dp" />
             </LinearLayout>
 
             <LinearLayout
