--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -7,10 +7,6 @@
     android:background="@color/FondoSecundario"
     tools:context=".Rutas.Inicio.Inicio">
 
-<!--    <include-->
-<!--        android:id="@+id/toolbar"-->
-<!--        layout="@layout/toolbar" />-->
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -37,18 +33,14 @@
                 android:gravity="center_horizontal|center_vertical"
                 android:text="-"
                 android:textColor="@color/Blanco"
-                android:textSize="28dp" />
-
-<!--            <View-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="8dp"-->
-<!--                android:layout_marginTop="15dp"-->
-<!--                android:background="@color/FondoSecundario2"/>-->
+                android:textSize="28dp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="4dp"
                 android:background="@color/FondoSecundario2"
                 android:orientation="horizontal">
 
@@ -56,27 +48,23 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:padding="10dp"
-                    android:src="@drawable/ic_correo"/>
+                    android:src="@drawable/ic_correo" />
 
                 <TextView
                     android:id="@+id/inicio_texto_usuario"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Usuario"
                     android:gravity="center_vertical"
                     android:paddingLeft="5dp"
-                    android:textSize="20dp"
-                    android:textColor="@color/Blanco"/>
+                    android:text="Usuario"
+                    android:textColor="@color/Blanco"
+                    android:textSize="20dp" />
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:background="@color/FondoSecundario"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
                 android:background="@color/FondoSecundario2"
                 android:orientation="horizontal">
 
@@ -84,55 +72,23 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:padding="10dp"
-                    android:src="@drawable/ic_configurar"/>
+                    android:src="@drawable/ic_configurar" />
 
                 <TextView
                     android:id="@+id/inicio_opc_config_texto"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Configuracion"
                     android:gravity="center_vertical"
                     android:paddingLeft="5dp"
-                    android:textSize="20dp"
-                    android:textColor="@color/Blanco"/>
+                    android:text="Configuracion"
+                    android:textColor="@color/Blanco"
+                    android:textSize="20dp" />
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:background="@color/FondoSecundario"/>
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:background="@color/FondoSecundario2"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <ImageView-->
-<!--                    android:layout_width="50dp"-->
-<!--                    android:layout_height="50dp"-->
-<!--                    android:padding="10dp"-->
-<!--                    android:src="@drawable/ic_galeria" />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/inicio_opc_imagen_texto"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:text="Editar Imagen"-->
-<!--                    android:gravity="center_vertical"-->
-<!--                    android:paddingLeft="5dp"-->
-<!--                    android:textSize="20dp"-->
-<!--                    android:textColor="@color/Blanco"/>-->
-<!--            </LinearLayout>-->
-
-<!--            <View-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="4dp"-->
-<!--                android:background="@color/FondoSecundario"/>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
                 android:background="@color/FondoSecundario2"
                 android:orientation="horizontal">
 
@@ -146,22 +102,18 @@
                     android:id="@+id/inicio_opc_imagen_texto"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Editar Perfil"
                     android:gravity="center_vertical"
                     android:paddingLeft="5dp"
-                    android:textSize="20dp"
-                    android:textColor="@color/Blanco"/>
+                    android:text="Editar Perfil"
+                    android:textColor="@color/Blanco"
+                    android:textSize="20dp" />
 
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:background="@color/FondoSecundario"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
                 android:background="@color/FondoSecundario2"
                 android:orientation="horizontal">
 
@@ -175,18 +127,13 @@
                     android:id="@+id/inicio_opc_log_texto"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Bitacora"
                     android:gravity="center_vertical"
                     android:paddingLeft="5dp"
-                    android:textSize="20dp"
-                    android:textColor="@color/Blanco"/>
+                    android:text="Bitacora"
+                    android:textColor="@color/Blanco"
+                    android:textSize="20dp" />
 
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:background="@color/FondoSecundario"/>
 
             <LinearLayout
                 android:id="@+id/inicio_opc_salir"
@@ -205,18 +152,13 @@
                     android:id="@+id/inicio_opc_salir_texto"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Cerrar Sesion"
                     android:gravity="center_vertical"
                     android:paddingLeft="5dp"
-                    android:textSize="20dp"
-                    android:textColor="@color/Blanco"/>
+                    android:text="Cerrar Sesion"
+                    android:textColor="@color/Blanco"
+                    android:textSize="20dp" />
 
             </LinearLayout>
-
-<!--            <View-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="8dp"-->
-<!--                android:background="@color/FondoSecundario2"/>-->
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
